--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-twilio.account_sid=your_account_sid
-twilio.auth_token=your_auth_token
-twilio.phone_number=your_twilio_phone_number
+twilio.account.sid=YOUR_TWILIO_ACCOUNT_SID
+twilio.auth.token=YOUR_TWILIO_AUTH_TOKEN
+twilio.phone.number=YOUR_TWILIO_PHONE_NUMBER
 
 server.port=8080
