--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,12 @@
 spring.application.name=SSD
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ssd_db
-spring.datasource.username=SSD-User
+spring.datasource.username=root
 spring.datasource.password=book@7412
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-twilio.account.sid=YOUR_TWILIO_ACCOUNT_SID
-twilio.auth.token=YOUR_TWILIO_AUTH_TOKEN
-twilio.phone.number=YOUR_TWILIO_PHONE_NUMBER
 
 server.port=8080
