fix_password security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+twilio.account-sid=your_twilio_account_sid
+twilio.auth-token=your_twilio_auth_token
+twilio.phone-number=your_twilio_phone_number
+
 server.port=8080
