--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,15 @@
 spring.application.name=SSD
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ssd_db
+spring.datasource.url=${DB_URL}
 spring.datasource.username=root
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-twilio.account-sid=${TWILIO_ACCOUNT_SID}
-twilio.auth-token=${TWILIO_AUTH_TOKEN}
-twilio.phone-number=${TWILIO_PHONE_NUMBER}
+twilio.account-sid=${ACCOUNT_SID}
+twilio.auth-token=${AUTH_TOKEN}
+twilio.phone-number=${PHONE_NUMBER}
 
 server.port=8080
