--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -41,7 +42,6 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	implementation 'com.twilio.sdk:twilio:8.32.0'
-
 	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
 }
 
