--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=SSD
 
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
