--- a/build.gradle
+++ b/build.gradle
@@ -24,25 +24,41 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot Starters
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	// Test Dependencies
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// Hibernate Validator
 	implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
-	implementation 'org.glassfish:jakarta.el:3.0.3'
 
+	// Jakarta API
+	implementation 'org.glassfish:jakarta.el:4.0.2'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+	implementation 'jakarta.servlet:jakarta.servlet-api:4.0.4'
 
-	testImplementation 'io.projectreactor:reactor-test'
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	// JWT (JJWT) - 최신 버전으로 업데이트
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5' // Jackson JSON parser support
 
+	// Database (MariaDB)
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+
+	// Twilio SDK
 	implementation 'com.twilio.sdk:twilio:8.32.0'
+
+	// Reactor Test
+	testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
