Build_MariaDB deriver add a dependency

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
 	// Database (MariaDB)
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	// Twilio SDK
 	implementation 'com.twilio.sdk:twilio:8.32.0'
