--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,12 @@ dependencies {
 
 	// Hibernate Validator
 	implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
+	implementation 'org.glassfish:jakarta.el:3.0.3'
 
 	// Jakarta API
 	implementation 'org.glassfish:jakarta.el:4.0.2'
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-	implementation 'jakarta.servlet:jakarta.servlet-api:4.0.4'
+	implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
 
 	// JWT (JJWT) - 최신 버전으로 업데이트
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
@@ -53,7 +54,6 @@ dependencies {
 
 	// Database (MariaDB)
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	// Twilio SDK
 	implementation 'com.twilio.sdk:twilio:8.32.0'
